# Uni

install/: local_setup.sh  setup.sh
install/Voice_recognition/lib/Voice_recognition/: stt_tts_sub
install/cpp_parameters/lib/cpp_parameters/: cpp_parameters_client  cpp_parameters_server
install/cpp_parameters/share/cpp_parameters/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cv_basics/share/cv_basics/: package.sh  package.xml
install/excutor_test/lib/excutor_test/: client_node  server_node
install/excutor_test/share/excutor_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/face_detection/lib/face_detection/: face_detect
install/face_detection/share/face_detection/: package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: latest_build
result/: face_encodings
src/.Voice_recognition/: package.xml  setup.cfg  setup.py
src/.Voice_recognition/src/: voice.py
src/.cpp_parameters/: CMakeLists.txt  package.xml
src/.cpp_parameters/src/: cpp_parameters_client.cpp  cpp_parameters_server.cpp
src/.cpp_pubsub/: CMakeLists.txt  package.xml
src/.cpp_pubsub/src/: publisher_member_function.cpp
src/.my_first_ros_rclcpp_pkg/: CMakeLists.txt  package.xml
src/.my_first_ros_rclcpp_pkg/src/: helloworld_publisher.cpp  helloworld_subscriber.cpp
src/.my_package/: package.xml
src/.server_pkg/: CMakeLists.txt
src/.srv_alarm_interface/: CMakeLists.txt
src/.srv_alarm_interface/srv/: ChangeAlarm.srv
src/.test/: package.xml
src/.test (copy)/: CMakeLists.txt
src/.topic_service_action_rclcpp_example/: CMakeLists.txt  package.xml
src/.uni_time/include/: shm_mutex.h
src/.uni_time/tcp/: tcpNshared.cpp
src/.uni_time/time_alarm_handle/: setup.py
src/.uni_time/time_calculate/: CMakeLists.txt  package.xml
src/.uni_time/time_msgs/: CMakeLists.txt
src/cv_basics/: setup.py
src/excutor_test/: setup.cfg  setup.py
src/excutor_test/excutor_test/: client.py  server.py
src/face_detection/: setup.py
src/face_detection/face_detection/: face_classifier.py  person_db.py  ros2_bridge.py
src/face_detection/face_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/uni/: CMakeLists.txt  package.xml
src/uni/install/: local_setup.sh  setup.sh
src/uni/launch/: alarm_config.launch.py
src/uni/log/: latest_build
src/uni/src/: jsondata.cpp
src/uni_save/: CMakeLists.txt  package.xml
src/uni_save/include/alarm/: alarmclient.hpp  alarmserver.hpp
src/uni_save/install/: setup.bash  setup.ps1  setup.zsh
src/uni_save/launch/: alarm_config.launch.py
src/uni_save/param/: alarm_config.yaml
src/uni_save/src/alarm/: alarmclient.cpp  alarmserver.cpp
src/uni_time/time_alarm_handle/: setup.cfg
src/uni_time/time_calculate/: CMakeLists.txt
src/uni_time/time_calculate/include/: shm_mutex.h
src/uni_time/time_calculate/include/time_calculate/: time_calculate_node.hpp
src/uni_time/time_calculate/src/: homeTCP.cpp  main.cpp  tcpNshared.cpp  time_calculate_node.cpp  time_sub.cpp
src/uni_time/time_msgs/: CMakeLists.txt  package.xml
src/voice_recognition/: package.xml  setup.py
src/voice_recognition/voice_recognition/: stt_tts.py
(+604 files in other folders)
